add lost pages recording function and timeout

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "path": "小说/",
-    "book": "冠盖六宫",
-    "url": "http://www.uuxs.net/book/10/10663/",
+    "book": "玄界之门",
+    "url": "http://www.uuxs.net/book/29/29751/",
     "headers": {
         "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.122 Safari/537.36 Edg/81.0.416.64"
     },
